force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/sugati__Tour_Search_Form_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used in Tour Search Form Page for change icon colors and text color.</description>
    <label>Tour Search Form Setting</label>
</CustomObject>