force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Booking_Form_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Booking_Form_Page_Name__c</fullName>
    <label>Booking Form Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>