force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Carousel_Interval__c.field-meta.xml
<CustomField>
    <fullName>sugati__Carousel_Interval__c</fullName>
    <description>Set the carousel images time interval in milliseconds.</description>
    <inlineHelpText>Set the carousel images time interval in milliseconds.</inlineHelpText>
    <label>Carousel Time Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>