force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Carousel_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Carousel_Text_Color__c</fullName>
    <label>Carousel Text Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>