force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Carousel_Text_Font__c.field-meta.xml
<CustomField>
    <fullName>sugati__Carousel_Text_Font__c</fullName>
    <inlineHelpText>Used in Tour Search From</inlineHelpText>
    <label>Carousel Text Font</label>
    <length>50</length>
    <type>Text</type>
</CustomField>