force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Carousel_Text_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Carousel_Text_Font_Size__c</fullName>
    <label>Carousel Text Font Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>