force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Color_Background_Book_Now__c.field-meta.xml
<CustomField>
    <fullName>sugati__Color_Background_Book_Now__c</fullName>
    <inlineHelpText>Set Background Color for Book Now Section.</inlineHelpText>
    <label>Color Background Book Now</label>
    <length>50</length>
    <type>Text</type>
</CustomField>