force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Color_Border__c.field-meta.xml
<CustomField>
    <fullName>sugati__Color_Border__c</fullName>
    <defaultValue>&quot;gray&quot;</defaultValue>
    <label>Color Border</label>
    <length>20</length>
    <type>Text</type>
</CustomField>