force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Color_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Color_Button__c</fullName>
    <label>Color Button</label>
    <length>50</length>
    <type>Text</type>
</CustomField>