force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Color_Icons__c.field-meta.xml
<CustomField>
    <fullName>sugati__Color_Icons__c</fullName>
    <inlineHelpText>Set color for All icons.</inlineHelpText>
    <label>Color Icons</label>
    <length>50</length>
    <type>Text</type>
</CustomField>