force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Color_Tour_Background__c.field-meta.xml
<CustomField>
    <fullName>sugati__Color_Tour_Background__c</fullName>
    <label>Color Tour Background</label>
    <length>50</length>
    <type>Text</type>
</CustomField>