force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Colour_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Text__c</fullName>
    <defaultValue>&quot;grey&quot;</defaultValue>
    <inlineHelpText>Set Color for Input Text.</inlineHelpText>
    <label>Colour Input Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>