force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Community_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Community_URL__c</fullName>
    <label>Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>