force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_About_Your_Trip__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_About_Your_Trip__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used in Tour Detail Page.</inlineHelpText>
    <label>Display About Your Trip</label>
    <type>Checkbox</type>
</CustomField>