force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Bank_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Bank_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To hide and show Bank Note on Tour Detail page.</description>
    <inlineHelpText>To hide and show Bank Note on Tour Detail page.</inlineHelpText>
    <label>Display Bank Note</label>
    <type>Checkbox</type>
</CustomField>