force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Book_Now_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Book_Now_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To hide and show Book Now button.</description>
    <inlineHelpText>To hide and show Book Now button.</inlineHelpText>
    <label>Display Book Now Button</label>
    <type>Checkbox</type>
</CustomField>