force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Departure_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To Hide and Show Departure Date.</inlineHelpText>
    <label>Display Departure Date</label>
    <type>Checkbox</type>
</CustomField>