force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Facebook__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Facebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Facebook</label>
    <type>Checkbox</type>
</CustomField>