force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Holiday_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Holiday Type</label>
    <type>Checkbox</type>
</CustomField>