force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Price_on_Tour_Detail__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Price_on_Tour_Detail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Display the price on the tour detail header? Used if a customer wishes to inject some custom pricing logic into the right-hand side of the header.</description>
    <inlineHelpText>Display the price on the tour detail header? Used if a customer wishes to inject some custom pricing logic into the right-hand side of the header.</inlineHelpText>
    <label>Display Price on Tour Detail</label>
    <type>Checkbox</type>
</CustomField>