force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Return_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Return Date</label>
    <type>Checkbox</type>
</CustomField>