force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Tour_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Tour_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Tour Component</label>
    <type>Checkbox</type>
</CustomField>