force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Display_Tour_Detail_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Tour_Detail_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To hide and show Tour Detail Button.</description>
    <inlineHelpText>To hide and show Tour Detail Button.</inlineHelpText>
    <label>Display Tour Detail Button</label>
    <type>Checkbox</type>
</CustomField>