force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Enable_Password_Popup__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Password_Popup__c</fullName>
    <description>Based on this field values enable password popup for pages.</description>
    <inlineHelpText>Based on this field values enable password popup for pages.</inlineHelpText>
    <label>Enable Password Popup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>