force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Header_Component_Class__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Component_Class__c</fullName>
    <description>The name of the class that returns a component to insert into the right-hand side of the header block on the tour detail page.</description>
    <inlineHelpText>The name of the class that returns a component to insert into the right-hand side of the header block on the tour detail page.</inlineHelpText>
    <label>Header Component Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>