force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Header_Component_Class_Namespace__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Component_Class_Namespace__c</fullName>
    <description>The namespace prefix of the header component class to be injected. Leave blank for local.</description>
    <inlineHelpText>The namespace prefix of the header component class to be injected. Leave blank for local.</inlineHelpText>
    <label>Header Component Class Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>