force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Header_Contact_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Contact_Email_Text__c</fullName>
    <defaultValue>&quot;hello@sugatitravel.com&quot;</defaultValue>
    <label>Header Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>