force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Header_Contact_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Contact_Number_Text__c</fullName>
    <defaultValue>&quot;Call us +44796 9485 948&quot;</defaultValue>
    <label>Header Contact Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>