force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Header_Logo__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Logo__c</fullName>
    <label>Header Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>