force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Itineraries_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Itineraries_Text__c</fullName>
    <label>Itineraries Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>