force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Itineraries_Text_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Itineraries_Text_Font_Size__c</fullName>
    <description>Set Font size for Itineraries Text.</description>
    <inlineHelpText>Set Font size for Itineraries Text.</inlineHelpText>
    <label>Itineraries Text Font Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>