force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_About_Your_Trip__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_About_Your_Trip__c</fullName>
    <inlineHelpText>Used in Tour Detail Page.</inlineHelpText>
    <label>Label About Your Trip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>