force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Back_To_Tour_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Back_To_Tour_Button__c</fullName>
    <defaultValue>&quot;Back To Tour Search&quot;</defaultValue>
    <label>Label Back To Tour Button</label>
    <length>50</length>
    <type>Text</type>
</CustomField>