force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Book_Now_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Book_Now_Button__c</fullName>
    <label>Label Book Now Button</label>
    <length>50</length>
    <type>Text</type>
</CustomField>