force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Download_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Download_Button__c</fullName>
    <inlineHelpText>Characters limit are 13</inlineHelpText>
    <label>Label Download Button</label>
    <length>13</length>
    <type>Text</type>
</CustomField>