force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Make_Enquiry_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Make_Enquiry_Button__c</fullName>
    <description>Used on &apos;Tour Detail&apos; page.</description>
    <label>Label Make Enquiry Button</label>
    <length>50</length>
    <type>Text</type>
</CustomField>