force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Options_Available__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Options_Available__c</fullName>
    <inlineHelpText>Used in Tour Detail page.</inlineHelpText>
    <label>Label Options Available</label>
    <length>100</length>
    <type>Text</type>
</CustomField>