force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Search_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Search_Button__c</fullName>
    <defaultValue>&quot;Search&quot;</defaultValue>
    <description>To Change SEARCH Button Label.</description>
    <inlineHelpText>To Change SEARCH Button Label.</inlineHelpText>
    <label>Label Search Button</label>
    <length>50</length>
    <type>Text</type>
</CustomField>