force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Sign_In__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Sign_In__c</fullName>
    <label>Label Sign In</label>
    <length>50</length>
    <type>Text</type>
</CustomField>