force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Tour_Detail_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Tour_Detail_Button__c</fullName>
    <defaultValue>&quot;TOUR DETAIL&quot;</defaultValue>
    <inlineHelpText>limit text to 13 characters</inlineHelpText>
    <label>Label Tour Detail Button</label>
    <length>13</length>
    <type>Text</type>
</CustomField>