force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Label_Tour_Highlights__c.field-meta.xml
<CustomField>
    <fullName>sugati__Label_Tour_Highlights__c</fullName>
    <inlineHelpText>Used in Tour Detail page.</inlineHelpText>
    <label>Label Tour Highlights</label>
    <length>100</length>
    <type>Text</type>
</CustomField>