force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Order_Of_Result__c.field-meta.xml
<CustomField>
    <fullName>sugati__Order_Of_Result__c</fullName>
    <inlineHelpText>Fill value &apos;Ascending&apos; or &apos;Descending&apos;. In which order to show the result.</inlineHelpText>
    <label>Order Of Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>