force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Preview_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__Preview_Opportunity_Id__c</fullName>
    <description>Which tour id do we use to preview the Tour Search form?</description>
    <inlineHelpText>Which tour id do we use to preview the Tour Search form?</inlineHelpText>
    <label>Preview Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>