force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Preview_Opportunity_Reference__c.field-meta.xml
<CustomField>
    <fullName>sugati__Preview_Opportunity_Reference__c</fullName>
    <description>Which tour opportunity reference do we use to preview the Tour Search Form page?</description>
    <inlineHelpText>Which tour opportunity reference do we use to preview the Tour Search Form page?</inlineHelpText>
    <label>Preview Opportunity Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>