force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Result_Order_By_Field__c.field-meta.xml
<CustomField>
    <fullName>sugati__Result_Order_By_Field__c</fullName>
    <inlineHelpText>Any field API name you want to order show the result by field.</inlineHelpText>
    <label>Result Order By Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>