force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Result_Show_Limit__c.field-meta.xml
<CustomField>
    <fullName>sugati__Result_Show_Limit__c</fullName>
    <inlineHelpText>How many search results want to show on the page.</inlineHelpText>
    <label>Result Show Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>