force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Search_Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__Search_Alert_Message__c</fullName>
    <label>Search Alert Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>