force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Search_Explanatory_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Search_Explanatory_Font_Size__c</fullName>
    <label>Search Explanatory Font Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>