force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Show_Download_PDF__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Download_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Download PDF</label>
    <type>Checkbox</type>
</CustomField>