force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_Confirm_Box_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Confirm_Box_Title__c</fullName>
    <description>This text will display on Tour Confirm Box popup.</description>
    <inlineHelpText>This text will display on Tour Confirm Box popup.</inlineHelpText>
    <label>Tour Confirm Box Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>