force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_Detail_Clickable__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Detail_Clickable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Make Tour Detail heading clickable.</description>
    <inlineHelpText>Make Tour Detail heading clickable.</inlineHelpText>
    <label>Tour Detail Clickable</label>
    <type>Checkbox</type>
</CustomField>