force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_Detail_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Detail_Header_Text__c</fullName>
    <label>Tour Detail Header Text</label>
    <length>13</length>
    <type>Text</type>
</CustomField>