force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_Detail_Image_Text_Font__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Detail_Image_Text_Font__c</fullName>
    <inlineHelpText>Used for Tour Detail Page Cover Image Text.</inlineHelpText>
    <label>Tour Detail Image Text Font</label>
    <length>50</length>
    <type>Text</type>
</CustomField>