force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_Detail_Image_Text_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Detail_Image_Text_Font_Color__c</fullName>
    <label>Tour Detail Image Text Font Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>