force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_Detail_Image_Text_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Detail_Image_Text_Font_Size__c</fullName>
    <inlineHelpText>Used in Tour Detail Image Text Font Size</inlineHelpText>
    <label>Tour Detail Image Text Font Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>