force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_Status_font_size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_Status_font_size__c</fullName>
    <description>Tour detail status font size</description>
    <inlineHelpText>Tour detail status font size</inlineHelpText>
    <label>Tour Status font size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>