force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Tour_status_font_weight__c.field-meta.xml
<CustomField>
    <fullName>sugati__Tour_status_font_weight__c</fullName>
    <description>Tour detail status font weight</description>
    <inlineHelpText>Tour detail status font weight</inlineHelpText>
    <label>Tour status font weight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>