force-app/main/default/objects/sugati__Tour_Search_Form_Setting__c/fields/sugati__Twitter_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Twitter_URL__c</fullName>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>